2009-11-06 Morten Tranberg Hansen  <mth@cs.au.dk>

	* initial code generated with kickstarter